stop using the deprecated com.jgoodies.forms.builder.PanelBuilder Class. stop using the deprecated com.jgoodies.forms.factories.Borders Class. stop using the deprecated org.apache.commons.io.input.BOMInputStream Constructor. stop using the deprecated java.net.URL Constructor. stop using the deprecated java.util.Locale Constructor. stop using the obsolete java.lang.Runtime.exec(String command) Method. stop using the deprecated java.lang.Object.finalize() Method. stop using the obsolete javax.swing.text.JTextComponent.modelToView(int pos) Method. stop using the unsupported com.sun.nio.file.ExtendedWatchEventModifier ensure InterruptedException is propagated. replace String.equals("") -> String.isEmpty()