@@ -20,6 +20,7 @@ import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import net.pms.dlna.DLNAThumbnailInputStream;
 import net.pms.network.HTTPResource;
@@ -38,18 +39,18 @@ public class WebStream extends StoreItem {
 		super(renderer, type);
 
 		try {
-			URL tmpUrl = new URL(url);
+			URL tmpUrl = URI.create(url).toURL();
 			tmpUrl = HTTPResourceAuthenticator.concatenateUserInfo(tmpUrl);
 			this.url = tmpUrl.toString();
-		} catch (MalformedURLException e) {
+		} catch (IllegalArgumentException | MalformedURLException e) {
 			this.url = url;
 		}
 
 		try {
-			URL tmpUrl = new URL(thumbURL);
+			URL tmpUrl = URI.create(thumbURL).toURL();
 			tmpUrl = HTTPResourceAuthenticator.concatenateUserInfo(tmpUrl);
 			this.thumbURL = tmpUrl.toString();
-		} catch (MalformedURLException e) {
+		} catch (IllegalArgumentException | MalformedURLException e) {
 			this.thumbURL = thumbURL;
 		}
 
